# sackli

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
beam/: sacklio.py  sacklio_test.py
cmake/: sackli_cc.cmake  third_party_aws.cmake  third_party_zstd.cmake
src/: sackli_index.cc  sackli_index.h  sackli_iterator.h  sackli_multi_index.cc  sackli_multi_index.h  sackli_options.h  sackli_reader.cc  sackli_reader.h  sackli_reader_test.cc  sackli_writer.cc  sackli_writer.h
src/file/: file.cc  file.h
src/file/file_system/: file_system.cc  file_system.h  mock_file_system.h  pread_file.cc  pread_file.h  pread_open_options.h  shard_spec.cc  shard_spec.h  string_pread_file.cc  string_pread_file.h  write_file.h
src/file/file_systems/gcs/: gcs_file_system.cc  gcs_file_system.h
src/file/file_systems/posix/: posix_file_system.cc  posix_file_system.h
src/file/file_systems/s3/: s3_file_system.cc  s3_file_system.h
src/file/registry/: file_system_registry.cc  file_system_registry.h  register_file_systems.cc  register_file_systems.h
src/internal/: limits_name.cc  limits_name.h  parallel_do.cc  parallel_do.h  records_limits.cc  records_limits.h  recycling_pool.h  sackli_shard_reader.cc  sackli_shard_reader.h  serialize.h  shard_indexing.cc  shard_indexing.h  zstd_compressor.cc  zstd_compressor.h  zstd_decompressor.cc  zstd_decompressor.h
src/python/: sackli.cc  sackli.pyi  sackli_index.cc  sackli_index.h  sackli_multi_index.cc  sackli_multi_index.h  sackli_options.cc  sackli_options.h  sackli_reader.cc  sackli_reader.h  sackli_test.py  sackli_writer.cc  sackli_writer.h
