[build-system]
requires = ["scikit-build-core>=0.9", "setuptools_scm"]
build-backend = "scikit_build_core.build"

[project]
name = "sackli"
description="A format for storing a sequence of byte-array records"
license = {file = "LICENSE"}
authors = [
    { name = "Charlie Beattie", email = "cbeattie@google.com" },
    { name = "Lucas Beyer", email = "lucasb.eyer.be@gmail.com" },
    { name = "Augustin Žídek", email = "augustinzidek@google.com" },
    { name = "Nicolas Porcel", email = "nicolasporcel@google.com" },
]
maintainers = [
    { name = "Lucas Beyer" },
]
readme = "README.md"
requires-python = ">=3.10,<3.15"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: File Formats",
    "Topic :: Scientific/Engineering",
]

dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/lucasb-eyer/sackli"
"Bug Tracker" = "https://github.com/lucasb-eyer/sackli/issues"
"Upstream" = "https://github.com/google-deepmind/bagz"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
cmake.args = ["-Wno-dev"]

[tool.setuptools_scm]

[tool.cibuildwheel]
# Keep the 2_28 baseline for openssl3, but let cibuildwheel pick a current
# official image so new Python interpreters (for example 3.14) are available.
manylinux-x86_64-image = "manylinux_2_28"
build = "cp3*-manylinux_x86_64"
build-frontend = "build[uv]"
build-verbosity = 1
test-command = "pytest {package}/src"
test-requires = "pytest numpy"

[tool.cibuildwheel.environment]
TEST_TMPDIR = "${PWD}/test_tmpdir"

[tool.cibuildwheel.linux]
# Install libcurl and openssl3 and make sure that openssl3 can be found. In
# CentOS, openssl3 will be suffixed, as openssl 1.1 is the default. This means
# that cmake cannot find it at the usual location.
before-all = '''
yum install -y libcurl-devel openssl3-devel \
    && ln -s openssl3/openssl /usr/include/openssl \
    && ln -s libssl.so.3 /usr/lib64/libssl.so \
    && ln -s libcrypto.so.3 /usr/lib64/libcrypto.so
'''

repair-wheel-command = "auditwheel repair --strip -w {dest_dir} {wheel}"
